--- a/results.html
+++ b/results.html
@@ -254,7 +254,7 @@
              const scoreHtml = ` <div class="text-center md:text-left"> 
                 <p class="text-xl font-bold text-yellow-500 mb-1">Pistacho 评分</p> 
                 <p class="text-7xl font-black ${styles.textColor}">${score.toFixed(2)}</p> 
-                <div class="mt-2 text-6xl font-black ${styles.textColor}"> ${grade.name_en} - ${grade.name_cn} </div> 
+                <div class="mt-2 text-3xl lg:text-4xl font-black ${styles.textColor} leading-tight"> ${grade.name_en} - ${grade.name_cn} </div> 
                 <!-- <p class="text-xs text-gray-400 mt-1">${grade.name_en}</p> --> 
              </div> `;
              let scaleHtml = '<div class="space-y-1 text-sm">';
@@ -266,5 +266,6 @@
     </script>
 </body>
 </html>
+
 
 
