--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             div.innerHTML = `
                 <div class="aspect-[1179/1572] w-full overflow-hidden flex-shrink-0 relative"> <!-- 1. 添加 'relative' -->
                     ${isCertified
-                        ? `<img src="/CertifiedStamp.png" alt="Certified" class="absolute top-1 left-1 w-8 h-8 md:w-10 md:h-10 z-10" title="Pistacho 认证评分">` // 2. (已修复) 使用根路径 /CertifiedStamp.png
+                        ? `<img src="/Certifiedstamp.png" alt="Certified" class="absolute top-1 left-1 w-8 h-8 md:w-10 md:h-10 z-10" title="Pistacho 认证评分">` // 2. (已修复) 修正为小写 's'
                         : ''
                     }
                     ${coverImageUrl
