--- a/results.html
+++ b/results.html
@@ -7,6 +7,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Swiper.js CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+    <!-- (已修复) Swiper.js JS 已移至 <head> 并添加 defer, 确保它在主逻辑运行前加载 -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js" defer></script>
     <script>
         if (typeof tailwind !== 'undefined') {
             tailwind.config = {
@@ -81,8 +83,8 @@
         </div>
     </div>
 
-    <!-- Swiper.js JS -->
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- (已修复) Swiper.js JS 已被移至 <head> -->
+    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
 
     <script type="module">
         // --- Constants and Global Vars ---
@@ -266,6 +268,4 @@
     </script>
 </body>
 </html>
-
-
 
